# risc0pkgs

./: LICENSE  README.md  flake.nix  overlay.nix
.github/workflows/: check.yml
docs/: LD_LIBRARY_PATH-sysroot-issue.md
lib/: buildRisc0Guest.nix  buildRisc0Host.nix  buildRisc0Package.nix  default.nix
pkgs/r0vm/: default.nix  from-source.nix  prebuilt.nix
pkgs/risc0-rust/: NOTES.md  default.nix  from-source.nix  prebuilt.nix
scripts/: use-template.sh
templates/default/: 0001-do-not-sanitize-cargo-home.patch  Cargo.toml  flake.nix
templates/default/methods/: Cargo.toml
templates/default/methods/guest/: Cargo.toml
templates/default/src/: lib.rs  main.rs
