[package]
name = "multiply"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=3.0.4", default-features = false, features = ["std"] }

risc0-steel = { git = "https://github.com/boundless-xyz/steel", tag = "v2.4.1" }

# Example git dependency.
base64 = { git = "https://github.com/marshallpierce/rust-base64", tag = "v0.10.0", default-features = false }

[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0" }
