[package]
name = "multiply"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }

risc0-steel = { git = "https://github.com/boundless-xyz/steel", tag = "v2.4.1" }

# Not used, but this is a good example for precompiles; patched crate will include `risc0-bigint2` (env setup required).
k256 = { version = "0.13", default-features = false, features = [] }

# Example git dependency.
base64 = { git = "https://github.com/marshallpierce/rust-base64", tag = "v0.10.0", default-features = false }

[patch.crates-io]
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
